[project]
name = "deep-search-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "deepagents>=0.4.12",
    "fastapi>=0.135.2",
    "lang>=0.1",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.22",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "mysql-connector-python>=9.6.0",
    "openai>=2.30.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pypdf>=6.9.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "ragflow-sdk>=0.22.1",
    "requests>=2.33.0",
    "tavily-python>=0.7.23",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.42.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
